force-app/main/default/objects/Engagement_VAT_Treatment__c/Engagement_VAT_Treatment__c.object-meta.xml
<CustomObject>
    <label>Engagement VAT Treatment</label>
    <nameField>
        <displayFormat>EVT-{000000}</displayFormat>
        <label>Engagement VAT Treatment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement VAT Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>