force-app/main/default/objects/Engagement_VAT_Treatment__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipName>Engagement_VAT_Treatements</relationshipName>
    <type>Lookup</type>
</CustomField>