force-app/main/default/objects/Engagement_VAT_Treatment__c/fields/HL_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>HL_Entity_Code__c</fullName>
    <formula>Engagement__r.ERP_Entity_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL Entity Code</label>
    <type>Text</type>
</CustomField>