force-app/main/default/objects/Engagement_VAT_Treatment__c/fields/Tax_Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Classification_Code__c</fullName>
    <label>Tax Classification Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>