force-app/main/default/objects/Engagement_VAT_Treatment__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Rated</fullName>
            </value>
            <value>
                <fullName>Zero Rated</fullName>
            </value>
            <value>
                <fullName>Exempt with Credit</fullName>
            </value>
            <value>
                <fullName>Exempt without Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>