force-app/main/default/objects/Engagement_VAT_Treatment__c/fields/View_Details__c.field-meta.xml
<CustomField>
    <fullName>View_Details__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , &quot;Details&quot;, &quot;_self&quot;)</formula>
    <label>View Details</label>
    <type>Text</type>
</CustomField>